--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
     <title>Sua Loja Online</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +34,7 @@
 
     <header class="bg-white/90 backdrop-blur-lg shadow-sm sticky top-0 z-40">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-3 flex justify-between items-center">
-            <img src="logo.png" alt="Logotipo da Loja" class="h-20">
+            <img src="logo.png" alt="Logotipo da Loja" class="h-16 sm:h-20">
             <button onclick="toggleCart()" class="relative text-slate-700 hover:text-sky-600 transition-colors">
                 <i class="fas fa-shopping-bag fa-lg"></i>
                 <span id="cart-count" class="absolute -top-2 -right-2 bg-red-500 text-white text-xs font-bold rounded-full h-5 w-5 flex items-center justify-center">0</span>
@@ -61,7 +57,7 @@
         </div>
     </footer>
 
-    <div id="cart-sidebar" class="fixed top-0 right-0 h-full w-full max-w-md bg-white shadow-2xl transform translate-x-full transition-transform duration-300 ease-in-out z-50 flex flex-col">
+    <div id="cart-sidebar" class="fixed top-0 right-0 h-full w-full sm:max-w-md bg-white shadow-2xl transform translate-x-full transition-transform duration-300 ease-in-out z-50 flex flex-col">
         <div class="p-4 flex justify-between items-center border-b"><h2 class="text-2xl font-bold text-slate-900">Seu Carrinho</h2><button onclick="toggleCart()" class="text-slate-600 hover:text-slate-900"><i class="fas fa-times fa-lg"></i></button></div>
         <div id="cart-items" class="flex-grow p-4 overflow-y-auto"></div>
         <div class="p-4 border-t bg-slate-50 overflow-y-auto">
@@ -107,7 +103,6 @@
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
     <script>
         let allProducts = []; let cart = []; let lojaConfig = {}; let empresaWhatsappNumber = '5511999999999';
@@ -116,51 +111,31 @@
         document.addEventListener('DOMContentLoaded', () => { fetchProducts(); loadCart(); document.getElementById('checkout-form').addEventListener('input', validarFormularioCheckout); handleOrderOptionChange(); const today = new Date().toISOString().split('T')[0]; document.getElementById('schedule-date').setAttribute('min', today); });
         async function fetchProducts() { try { const response = await fetch(`produtos.json?v=${new Date().getTime()}`); if (!response.ok) throw new Error(`Arquivo produtos.json não encontrado.`); const data = await response.json(); lojaConfig = data.config || {}; allProducts = data.produtos; empresaWhatsappNumber = lojaConfig.whatsappNumber || empresaWhatsappNumber; applyStoreConfig(); renderCarousels(); syncCartWithProducts(); } catch (error) { console.warn(`Aviso: ${error.message}.`); renderCarousels(); } }
         function applyStoreConfig() { const agendarOptionContainer = document.getElementById('agendar-option-container'); const orderOptionsGrid = document.getElementById('order-options'); const agendamentoHabilitado = lojaConfig.habilitarAgendamento !== false; if (agendamentoHabilitado) { agendarOptionContainer.style.display = 'block'; orderOptionsGrid.classList.remove('grid-cols-2'); orderOptionsGrid.classList.add('grid-cols-3'); } else { agendarOptionContainer.style.display = 'none'; orderOptionsGrid.classList.remove('grid-cols-3'); orderOptionsGrid.classList.add('grid-cols-2'); if (document.getElementById('option-schedule').checked) { document.getElementById('option-delivery').checked = true; handleOrderOptionChange(); } } }
-        function renderCarousels() { const container = document.getElementById('product-carousels'); container.innerHTML = ''; const productsByCategory = allProducts.reduce((acc, product) => { (acc[product.categoria] = acc[product.categoria] || []).push(product); return acc; }, {}); if (Object.keys(productsByCategory).length === 0) { container.innerHTML = `<p class="text-center text-slate-500">Nenhum produto cadastrado no momento.</p>`; return; } for (const category in productsByCategory) { container.innerHTML += `<div class="category-section"><h2 class="text-2xl font-bold mb-5 text-slate-900">${category}</h2><div class="swiper-container"><div class="swiper-wrapper">${productsByCategory[category].map(product => `<div class="swiper-slide"><div class="bg-white rounded-lg shadow-md overflow-hidden group transition-all duration-300 hover:shadow-xl h-full flex flex-col"><div onclick="openModal(${product.id})" class="cursor-pointer"><img src="${product.fotos[0]}" onerror="this.src='https://placehold.co/500x500/e2e8f0/64748b?text=Imagem'" alt="${product.nome}" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300"></div><div class="p-4 flex-grow flex flex-col justify-between"><div><h3 onclick="openModal(${product.id})" class="font-semibold text-lg truncate cursor-pointer text-slate-800 group-hover:text-sky-600 transition-colors">${product.nome}</h3></div><div class="mt-4 flex justify-between items-center"><p class="text-slate-900 font-bold text-xl">R$ ${product.preco.toFixed(2).replace('.', ',')}</p><button onclick="quickAddToCart(${product.id})" class="bg-sky-600 text-white rounded-full w-11 h-11 flex items-center justify-center shadow-lg hover:bg-sky-700 transition-all transform hover:scale-110 flex-shrink-0"><i class="fas fa-plus"></i></button></div></div></div></div>`).join('')}</div><div class="swiper-button-next"></div><div class="swiper-button-prev"></div></div></div>`; } new Swiper('.swiper-container', { loop: false, slidesPerView: 1.4, spaceBetween: 16, navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' }, breakpoints: { 640: { slidesPerView: 2.5 }, 768: { slidesPerView: 3.5 }, 1024: { slidesPerView: 4.5 } } }); }
+        function renderCarousels() { const container = document.getElementById('product-carousels'); container.innerHTML = ''; const productsByCategory = allProducts.reduce((acc, product) => { (acc[product.categoria] = acc[product.categoria] || []).push(product); return acc; }, {}); if (Object.keys(productsByCategory).length === 0) { container.innerHTML = `<p class="text-center text-slate-500">Nenhum produto cadastrado no momento.</p>`; return; } for (const category in productsByCategory) { container.innerHTML += `<div class="category-section"><h2 class="text-2xl font-bold mb-5 text-slate-900">${category}</h2><div class="swiper-container"><div class="swiper-wrapper">${productsByCategory[category].map(product => `<div class="swiper-slide"><div class="bg-white rounded-lg shadow-md overflow-hidden group transition-all duration-300 hover:shadow-xl h-full flex flex-col"><div onclick="openModal(${product.id})" class="cursor-pointer"><img src="${product.fotos[0]}" onerror="this.src='https://placehold.co/500x500/e2e8f0/64748b?text=Imagem'" alt="${product.nome}" class="w-full h-48 sm:h-64 object-cover group-hover:scale-105 transition-transform duration-300"></div><div class="p-4 flex-grow flex flex-col justify-between"><div><h3 onclick="openModal(${product.id})" class="font-semibold text-lg truncate cursor-pointer text-slate-800 group-hover:text-sky-600 transition-colors">${product.nome}</h3></div><div class="mt-4 flex justify-between items-center"><p class="text-slate-900 font-bold text-xl">R$ ${product.preco.toFixed(2).replace('.', ',')}</p><button onclick="quickAddToCart(${product.id})" class="bg-sky-600 text-white rounded-full w-11 h-11 flex items-center justify-center shadow-lg hover:bg-sky-700 transition-all transform hover:scale-110 flex-shrink-0"><i class="fas fa-plus"></i></button></div></div></div></div>`).join('')}</div><div class="swiper-button-next"></div><div class="swiper-button-prev"></div></div></div>`; } new Swiper('.swiper-container', { loop: false, slidesPerView: 1.4, spaceBetween: 16, navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' }, breakpoints: { 640: { slidesPerView: 2.5 }, 768: { slidesPerView: 3.5 }, 1024: { slidesPerView: 4.5 } } }); }
         function openModal(productId) { const product = allProducts.find(p => p.id === productId); if (!product) return; const modal = document.getElementById('product-modal'); const modalContent = document.getElementById('modal-content'); const corHtml = lojaConfig.habilitarCor && product.cor ? `<p class="text-slate-500 text-sm mb-4">Cor: ${product.cor}</p>` : ''; const tamanhosHtml = lojaConfig.habilitarTamanhos && product.tamanhos.length > 0 ? `<div class="mb-6"><label for="size-select" class="block text-sm font-medium text-slate-700 mb-1">Tamanho:</label><select id="size-select" class="w-full p-3 border border-slate-300 rounded-md bg-white">${product.tamanhos.map(size => `<option value="${size}">${size}</option>`).join('')}</select></div>` : '<input type="hidden" id="size-select" value="Único">'; modalContent.innerHTML = `<div class="w-full md:w-1/2 p-4 flex-shrink-0"><img src="${product.fotos[0]}" onerror="this.src='https://placehold.co/500x500/e2e8f0/64748b?text=Imagem'" alt="${product.nome}" class="w-full h-64 md:h-full object-contain rounded-lg"></div><div class="w-full md:w-1/2 p-6 flex flex-col justify-center relative"><button onclick="closeModal()" class="absolute top-4 right-4 text-2xl text-slate-600 hover:text-black">&times;</button><h2 class="text-2xl md:text-3xl font-bold mb-2 text-slate-900">${product.nome}</h2><p class="text-xl md:text-2xl font-bold text-sky-600 mb-4">R$ ${product.preco.toFixed(2).replace('.', ',')}</p>${corHtml}<p class="text-slate-600 mb-6">${product.descricao}</p>${tamanhosHtml}<button onclick="addToCartFromModal(${product.id})" class="w-full bg-sky-600 text-white py-3 rounded-lg font-bold hover:bg-sky-700 transition-colors">Adicionar ao Carrinho</button></div>`; modal.classList.remove('hidden'); modal.classList.add('flex'); setTimeout(() => modalContent.classList.remove('scale-95'), 10); }
         function closeModal() { document.getElementById('product-modal').classList.add('hidden'); document.getElementById('modal-content').classList.add('scale-95'); }
         function addToCartFromModal(productId) { addProductToCart(productId, document.getElementById('size-select').value); closeModal(); }
         function quickAddToCart(productId) { const product = allProducts.find(p => p.id === productId); if (!product) return; const size = (lojaConfig.habilitarTamanhos && product.tamanhos.length > 0) ? product.tamanhos[0] : 'Único'; addProductToCart(productId, size); }
-        function addProductToCart(productId, size) { const product = allProducts.find(p => p.id === productId); const uniqueId = `${productId}-${size}`; const productInCart = cart.find(item => item.uniqueId === uniqueId); if (productInCart) productInCart.quantidade++; else cart.push({ ...product, tamanho: size, uniqueId, quantidade: 1 }); saveCart(); updateCartUI(); 
-            if (!primeiroItemAdicionado) {
-                openCartConfirmationModal();
-                primeiroItemAdicionado = true;
-            } else {
-                showToast();
-            }
-        }
+        function addProductToCart(productId, size) { const product = allProducts.find(p => p.id === productId); const uniqueId = `${productId}-${size}`; const productInCart = cart.find(item => item.uniqueId === uniqueId); if (productInCart) productInCart.quantidade++; else cart.push({ ...product, tamanho: size, uniqueId, quantidade: 1 }); saveCart(); updateCartUI(); if (!primeiroItemAdicionado) { openCartConfirmationModal(); primeiroItemAdicionado = true; } else { showToast(); } }
         function showToast() { const toast = document.getElementById('toast-notification'); toast.classList.remove('translate-y-20', 'opacity-0'); setTimeout(() => toast.classList.add('translate-y-20', 'opacity-0'), 2000); }
-        
-        function openCartConfirmationModal() {
-            const modal = document.getElementById('cart-confirmation-modal');
-            modal.classList.remove('hidden');
-            modal.classList.add('flex');
-            setTimeout(() => modal.querySelector('div').classList.remove('scale-95'), 10);
-        }
-
-        function closeCartConfirmationModal() {
-            const modal = document.getElementById('cart-confirmation-modal');
-            modal.querySelector('div').classList.add('scale-95');
-            setTimeout(() => modal.classList.add('hidden'), 300);
-        }
-
-        function goToCart() {
-            closeCartConfirmationModal();
-            setTimeout(() => {
-                const cartSidebar = document.getElementById('cart-sidebar');
-                if (cartSidebar.classList.contains('translate-x-full')) {
-                    toggleCart();
-                }
-            }, 300);
-        }
-
+        function openCartConfirmationModal() { const modal = document.getElementById('cart-confirmation-modal'); modal.classList.remove('hidden'); modal.classList.add('flex'); setTimeout(() => modal.querySelector('div').classList.remove('scale-95'), 10); }
+        function closeCartConfirmationModal() { const modal = document.getElementById('cart-confirmation-modal'); modal.querySelector('div').classList.add('scale-95'); setTimeout(() => modal.classList.add('hidden'), 300); }
+        function goToCart() { closeCartConfirmationModal(); setTimeout(() => { const cartSidebar = document.getElementById('cart-sidebar'); if (cartSidebar.classList.contains('translate-x-full')) { toggleCart(); } }, 300); }
         function toggleCart() { document.getElementById('cart-sidebar').classList.toggle('translate-x-full'); }
         function updateCartUI() { const cartItemsContainer = document.getElementById('cart-items'); const cartCount = document.getElementById('cart-count'); const cartTotal = document.getElementById('cart-total'); let totalEmCentavos = 0; cartItemsContainer.innerHTML = cart.length === 0 ? '<div class="text-center p-8"><i class="fas fa-shopping-cart text-4xl text-slate-300 mb-4"></i><p class="text-slate-500">Seu carrinho está vazio.</p></div>' : ''; cart.forEach(item => { totalEmCentavos += (item.preco * 100) * item.quantidade; const tamanhoHtml = lojaConfig.habilitarTamanhos && item.tamanho !== 'Único' ? `<p class="text-sm text-slate-600">Tamanho: ${item.tamanho}</p>` : ''; cartItemsContainer.innerHTML += `<div class="flex items-start justify-between mb-4 pb-4 border-b"><img src="${item.fotos[0]}" onerror="this.src='https://placehold.co/150x150/e2e8f0/64748b?text=Img'" alt="${item.nome}" class="w-20 h-20 object-cover rounded-md"><div class="flex-grow mx-3"><p class="font-bold text-slate-800">${item.nome}</p>${tamanhoHtml}<p class="text-sm font-semibold text-slate-700">R$ ${item.preco.toFixed(2).replace('.', ',')}</p><div class="flex items-center space-x-3 mt-2"><button onclick="decreaseQuantity('${item.uniqueId}')" class="w-7 h-7 bg-slate-200 rounded-full font-bold flex items-center justify-center hover:bg-slate-300">-</button><span class="font-bold text-md">${item.quantidade}</span><button onclick="increaseQuantity('${item.uniqueId}')" class="w-7 h-7 bg-slate-200 rounded-full font-bold flex items-center justify-center hover:bg-slate-300">+</button></div></div><button onclick="removeFromCart('${item.uniqueId}')" class="text-red-500 hover:text-red-700 transition-colors p-2"><i class="fas fa-trash"></i></button></div>`; }); cartCount.textContent = cart.reduce((acc, item) => acc + item.quantidade, 0); cartTotal.textContent = `R$ ${(totalEmCentavos / 100).toFixed(2).replace('.', ',')}`; validarFormularioCheckout(); }
         const increaseQuantity = (id) => changeQuantity(id, 1); const decreaseQuantity = (id) => changeQuantity(id, -1);
         function changeQuantity(uniqueId, amount) { const item = cart.find(item => item.uniqueId === uniqueId); if (item) { item.quantidade += amount; if (item.quantidade <= 0) removeFromCart(uniqueId); else { saveCart(); updateCartUI(); } } }
         const removeFromCart = (id) => { cart = cart.filter(item => item.uniqueId !== id); saveCart(); updateCartUI(); };
-        function saveCart() { localStorage.setItem('lojaCarrinho', JSON.stringify(cart)); }
-        function loadCart() { const savedCart = localStorage.getItem('lojaCarrinho'); if (savedCart) cart = JSON.parse(savedCart); }
+        
+        // ALTERAÇÃO CRÍTICA APLICADA AQUI: Trocado localStorage por sessionStorage
+        function saveCart() {
+            sessionStorage.setItem('lojaCarrinho', JSON.stringify(cart));
+        }
+        function loadCart() {
+            const savedCart = sessionStorage.getItem('lojaCarrinho');
+            if (savedCart) cart = JSON.parse(savedCart);
+        }
+
         function syncCartWithProducts() { if (cart.length === 0 || allProducts.length === 0) { updateCartUI(); return; } let cartFoiModificado = false; const carrinhoAtualizado = cart.map(itemNoCarrinho => { const produtoNaLoja = allProducts.find(p => p.id === itemNoCarrinho.id); if (!produtoNaLoja) { cartFoiModificado = true; return null; } const dadosParaAtualizar = { preco: produtoNaLoja.preco, nome: produtoNaLoja.nome, fotos: produtoNaLoja.fotos }; Object.assign(itemNoCarrinho, dadosParaAtualizar); if (itemNoCarrinho.preco !== produtoNaLoja.preco) cartFoiModificado = true; return itemNoCarrinho; }).filter(Boolean); cart = carrinhoAtualizado; if (cartFoiModificado) { saveCart(); showToast('Seu carrinho foi atualizado.'); } updateCartUI(); }
         function handleOrderOptionChange() { const selectedOption = document.querySelector('input[name="order-option"]:checked').value; const addressField = document.getElementById('address-field'); const scheduleFields = document.getElementById('schedule-fields'); const addressInput = document.getElementById('customer-address'); const scheduleInputs = scheduleFields.querySelectorAll('input'); addressInput.required = (selectedOption === 'Delivery'); addressField.style.display = (selectedOption === 'Delivery') ? 'block' : 'none'; scheduleInputs.forEach(input => input.required = (selectedOption === 'Agendar Mesa')); scheduleFields.style.display = (selectedOption === 'Agendar Mesa') ? 'block' : 'none'; validarFormularioCheckout(); }
         function validarFormularioCheckout() { const form = document.getElementById('checkout-form'); const inputs = form.querySelectorAll('input[required], select[required]'); const finalizeButton = document.getElementById('finalize-button'); let isFormValid = true; inputs.forEach(input => { const value = input.value.trim(); if (!value || (input.tagName === 'SELECT' && input.selectedIndex === 0)) { isFormValid = false; input.classList.add('invalid-field'); } else { input.classList.remove('invalid-field'); } }); const isAgendamentoValido = document.querySelector('input[name="order-option"]:checked').value === 'Agendar Mesa'; finalizeButton.disabled = !(isFormValid && (cart.length > 0 || isAgendamentoValido)); }
